# sia

./: README.md
rustystorage/: .dockerignore  .env.example  .gitlab-ci.yml  AUTHORS  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
rustystorage/proto/: file.proto
rustystorage/src/: lib.rs  local_env.rs
rustystorage/src/file/: controllers.rs  file.rs  grpc.rs  mod.rs
rustystorage/src/s3/: client.rs
rustystore/: .env.ci  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
rustystore/db/: init.sql
rustystore/migrations/2023-05-14-232400_file/: down.sql  up.sql
rustystore/proto/: storefile.proto  tag.proto
rustystore/src/: colors.rs  database.rs  lib.rs  local_env.rs  schema.rs
rustystore/src/file/: controllers.rs  database.rs  file.rs  grpc.rs  mod.rs  models.rs
rustystore/src/health/: mod.rs
rustystore/src/tag/: controllers.rs  database.rs  grpc.rs  mod.rs  models.rs  tag.rs
rustystore/tests/: file.rs  tag.rs
store/: .gitignore  Dockerfile  angular.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
store/nginx/: nginx.conf
store/src/: index.html  main.ts
store/src/app/: alert.service.ts  app.component.spec.ts  app.component.ts  auth.interceptor.spec.ts  auth.interceptor.ts  bytes.pipe.spec.ts  bytes.pipe.ts  mime.pipe.spec.ts  mime.pipe.ts
store/src/app/header/: header.component.html  header.component.ts
store/src/app/home/: home.component.html  home.component.ts
store/src/app/input-password/: input-password.component.html  input-password.component.ts
store/src/app/ngx-file/: fileinfo.interface.ts  ngx-file.service.ts  upload.component.html  upload.component.ts
store/src/app/store/: store.component.html  store.component.ts
store/src/assets/environments/: environment.ts
