[package]
name = "rustystore"
version = "0.1.0"
edition = "2021"
path = "src/bin/main.rs"


[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'packed'
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
lazy_static = "1.5.0"
dotenv = "0.15.0"
chrono = "0.4.23"
fmt = "0.1.0"
mime = "0.3.16"
function_name = "0.3.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
regex = "1.7.0"
num = "0.4.3"
rand = "0.9.0"
rstest = "0.24.0"
tokio = {version = "1.43.0", features = ["full"]}
tokio-stream = "0.1.17"
actix-web = { version = "4.9.0", features = ["openssl"] }
actix-cors = "0.7.0"
utoipa = {version = "5.3.1", features = ["actix_extras"]}
utoipa-swagger-ui = {version = "9.0.0", features = ["actix-web"]}
serde = "1.0.217"
diesel = {version = "2.2.7", features = ["postgres", "r2d2", "chrono", "uuid"]}
serde_with = "3.0.0"
tonic = "0.12.3"
tonic-reflection = "0.12.3"
prost = "0.13.4"


[build-dependencies]
tonic-build = "0.12.3"